@@ -29,7 +29,7 @@
   c93e459947ca3f90e0fc98490d05f8a6e2120aae 2010071900 mingw32-base.xml
   7ff448c34d1b3e7d49f9c10bbe4630366d0d9f3d 2010090600 mingw32-basic-bsdtar.xml
   89f2e01067e79bd79bf30d3e547874e58b065397 2011021600 mingw32-binutils.xml
-  b02dc7d1ec48f9e9de3e0d04ccc79f4529f7e60f 2010090600 mingw32-bzip2.xml
+  ec771f5e285c64e0696f091c99f680286c3c908e 2011052100 mingw32-bzip2.xml
   07b4037fb26f3015890c27e07f6e292bba1c2dbb 2010090600 mingw32-cygutils.xml
   f22aef52f7062813148d3ea1f4477b7ee05f5f5a 2010052100 mingw32-expat.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
